--- a/packages/ketchup/src/components/kup-data-table/modules/kup-data-table-sticky-header.scss
+++ b/packages/ketchup/src/components/kup-data-table/modules/kup-data-table-sticky-header.scss
@@ -15,7 +15,7 @@ sticky-header {
     position: fixed;
     top: 0;
     transition: opacity 0.25s ease-in-out;
-    z-index: 1;
+    z-index: 10;
 
     &.activated {
       opacity: 1;
